--- a/ImmuncoldCalculadora.html
+++ b/ImmuncoldCalculadora.html
@@ -30,7 +30,7 @@
                     <input type="number" id="input_qtda_vacinas_perdidas" placeholder="ex 0."><br><br>
                     <label>Quantidade de vacinas descartadas</label>
                     <input type="number" id="input_qtda_vacinas_descartdas" placeholder="ex 0."><br><br>
-                    <label>Valor pago por vacina</label>
+                    <label>Valor pago por vacina</label><br><br>
                     <input type="number" id="input_valor_pago" placeholder="R$ ?"><br><br>
                     <button onclick="calcular()">Calcular</button>
 
